<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="compost">Compost</string>
    <string name="soil">Soil</string>
    <string name="water">Water</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>
    <string name="software_notices">Software Notices</string>
    <string name="camera_permission">Camera permission is required</string>
    <string name="version_expired">Version expired</string>
    <string name="version_has_expired">This version of the app has expired.</string>
    <string name="uninstall_install_from_store">Please uninstall and then install the latest version from Play Store.</string>
    <string name="result_list">List of results</string>
    <string name="no_data">No test results yet</string>
    <string name="tap_to_start">Tap the <b>+</b> button below to\nlaunch a new test.</string>
    <string name="start_test">Start test</string>
    <string name="compost_test">Compost Test</string>
    <string name="soil_test">Soil Test</string>
    <string name="card_test">Simple Card Test</string>
    <string name="colorimetric_test">Colorimetric Test</string>
    <string name="titration_test">Titration Test</string>
    <string name="external_meter">External Meter</string>
    <string name="view_results">View Results</string>
    <string name="resources">Resources</string>
    <string name="results">Results</string>
    <string name="analyzed_image">Analyzed image</string>
    <string name="disable_diagnostics">Disable diagnostics</string>
    <string name="settings_not_clickable">Settings not clickable</string>
    <string name="scanning">Scanning…</string>
    <string name="capture_photo">Capture photo</string>
    <string name="invalid_image">Invalid image</string>
    <string name="result">Result</string>
    <string name="analyzed_photo">Analyzed Photo</string>
    <string name="color_extracts">Colors detected</string>
    <string name="confirm_color_extract">If the color detection above is incorrect, redo the capture with better light conditions.</string>
    <string name="result_image">Result image</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="place_card_and_cuvette">Place the card and cuvette with the water sample on the provided stand.</string>
    <string name="when_ready_camera">When ready, point the phone camera at it.</string>
    <string name="click_launch_camera">Click <b>Start</b> below to launch the camera preview.</string>
    <string name="camera_start_align_card">When the camera starts, align the card in the viewer as shown in the example above.</string>
    <string name="continue_on">Continue</string>
    <string name="redo">Redo</string>
    <string name="navigate_up">Navigate up</string>
    <string name="analyzing_photo">Analyzing photo…</string>
    <string name="brightness">Brightness</string>
    <string name="closer">Closer</string>
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
    <string name="select_calibration_point">Select calibration point</string>
    <string name="select_standard_measured">Select the value of the standard measured</string>
    <string name="color_shift">Color shift</string>
    <string name="skip">Skip</string>
    <string name="no_error" tools:keep="@string/no_error">Error</string>
    <string name="no_match" tools:keep="@string/no_match">No match</string>
    <string name="calibration_error" tools:keep="@string/calibration_error">Calibration error</string>
    <string name="bad_lighting" tools:keep="@string/bad_lighting">Bad lighting</string>
    <string name="not_bright">Not bright enough</string>
    <string name="too_bright">Too bright</string>
    <string name="too_many_shadows">Shadows on card</string>
    <string name="image_tilted" tools:keep="@string/image_tilted">Tilted image</string>
    <string name="invalid_barcode">Wrong color card</string>
    <string name="wrong_card" tools:keep="@string/wrong_card">Wrong color card</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="low_alkalinity">Acidic</string>
    <string name="medium_alkalinity">Neutral</string>
    <string name="high_alkalinity">Basic</string>
    <string name="margin_of_error">Margin of error: ±</string>
    <string name="check_color_card">Check that the correct color card is being used. Also ensure that the card is placed in a well lit area with indirect lighting.</string>
    <string name="details">Details</string>
    <string name="no_image_selected">Using camera. Sample image not selected.</string>
    <string name="test_mode_image_selected">Test Mode. Sample Image: %s</string>
    <string name="update_ready">Update is ready to install</string>
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
    <string name="ammonia" tools:keep="@string/ammonia">Ammonia</string>
    <string name="dissolved_oxygen" tools:keep="@string/dissolved_oxygen">Dissolved Oxygen</string>
    <string name="fluoride" tools:keep="@string/fluoride">Fluoride</string>
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="nitrite" tools:keep="@string/nitrite">Nitrite</string>
    <string name="nitrogen" tools:keep="@string/nitrogen">Nitrogen</string>
    <string name="organic_carbon" tools:keep="@string/organic_carbon">Organic Carbon</string>
    <string name="ph" tools:keep="@string/ph">pH</string>
    <string name="phosphate" tools:keep="@string/phosphate">Phosphate</string>
    <string name="phosphorous" tools:keep="@string/phosphorous">Phosphorous</string>
    <string name="potassium" tools:keep="@string/potassium">Potassium</string>
    <string name="residual_chlorine" tools:keep="@string/residual_chlorine">Residual Chlorine</string>
    <string name="invalid_card_test" tools:keep="@string/invalid_card_test">Invalid Card Test</string>
    <string name="unknown" tools:keep="@string/unknown">Unknown</string>
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
    <string name="tilt_left_forwards">Tilt phone left side forwards</string>
    <string name="tilt_left_backwards">Tilt phone left side backwards</string>
    <string name="remove_response">Remove response</string>
    <string name="cancel">Cancel</string>
    <string name="yes_share">Yes Share</string>
    <string name="no_thanks">No Thanks</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="comment">Comment</string>
    <string name="location">Location</string>
    <string name="get_location">GPS location</string>
    <string name="short_description">Description / Title</string>
    <string name="source_type">Source type</string>
    <string name="gps_instructions">Stand near the water source but away from objects that could block the GPS signals</string>
    <string name="location_permission">Location permission is required</string>
    <string name="accuracy">Accuracy</string>
    <string name="getting_location">Getting location</string>
    <string name="accept_location">Accept</string>
    <string name="lat_lon">Lat/Lon</string>
    <string name="save">Save</string>
    <string name="required_error">This is required</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="info">Info</string>
    <string name="manual_photo_capture">Manual photo capture</string>
    <string name="manual_photo_summary">Turn this on if the auto photo capture is not working well on this phone</string>
    <string name="airplane_mode_off">Please turn off airplane mode</string>
    <string name="version">Version</string>
    <string name="calibration_succeeded">Calibration succeeded</string>
    <string name="times_dilution" tools:ignore="PluralsCandidate">%1$d Times Dilution</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="high_levels">High Levels</string>
    <string name="high_risk_unsafe">High Risk / Unsafe</string>
    <string name="low_risk">Low Risk</string>
    <string name="low_risk_safe">Safe / Low Risk</string>
    <string name="recalibrate">Recalibrate</string>
    <string name="ph_acceptable_msg">pH value is within the acceptable limit.</string>
    <string name="ph_unsafe_msg">pH value is out of the acceptable limit.</string>
    <string name="safety_acceptable_msg">%1$s is within acceptable limit for drinking water.</string>
    <string name="safety_permissible_msg">%1$s is within the permissible limit but above acceptable limit for drinking water.</string>
    <string name="safety_unsafe_msg">%1$s is above the permissible limit.</string>
    <string name="high_level_message"><b>Note:</b> Testing with dilution is advised</string>
    <string name="reagent_expiry">Reagent expiry</string>
    <string name="no_relaxation">No relaxation</string>
    <string name="deficient">Deficient</string>
    <string name="sufficient">Sufficient</string>
    <plurals name="dilutions">
        <item quantity="one">@string/no_dilution</item>
        <item quantity="many">@string/times_dilution</item>
        <item quantity="other">@string/times_dilution</item>
    </plurals>
    <string name="dilution">Dilution</string>
    <string name="no_dilution">No Dilution</string>
    <string name="select_dilution">Select amount of dilution</string>
    <string name="custom_dilution">Custom Dilution</string>
    <string name="enter_dilution_factor">Enter Dilution Factor</string>
    <string name="test_with_dilution">Test with Dilution</string>
    <string name="up_to_with_dilution">Up to %s with dilution</string>
    <string name="seconds">seconds</string>
    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <string-array name="WaterSource">
        <item>Borewell water</item>
        <item>Drinking water</item>
        <item>Effluent</item>
        <item>Ground water</item>
        <item>Lake water</item>
        <item>Rain water</item>
        <item>River water</item>
        <item>Sewage</item>
    </string-array>
    <string name="start_timer">Start Timer</string>
</resources>