<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="calibrate"
        android:summary="@string/calibrate_summary"
        android:title="@string/calibrate"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:key="@string/manualCaptureOnlyKey"
        android:summary="@string/manual_photo_summary"
        android:title="@string/manual_photo_capture"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="@string/aboutKey"
        android:title="@string/about"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />
</androidx.preference.PreferenceScreen>
