<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_standard"
        android:paddingTop="@dimen/margin_small"
        android:paddingRight="@dimen/margin_standard"
        android:paddingBottom="@dimen/margin_standard">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/compost_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/compost_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/soil_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/soil_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/card_test_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/card_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/colorimetric_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/colorimetric_test" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/titration_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/titration_test"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_result_button"
            style="@style/Widget.Collect.Button.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:text="@string/view_results" />

    </LinearLayout>
</LinearLayout>
