<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_bar_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/sample_type_tab"
        style="@style/Widget.MaterialComponents.TabLayout.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSecondaryVariant"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIconTint="@color/tabIconColor"
        app:tabIndicatorHeight="4dp"
        app:tabIndicatorColor="@color/tabIndicatorColor"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/tabSelectedTextColor"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:tabTextColor="@color/tabTextColor">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="compost"
            android:text="@string/compost" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="soil"
            android:text="@string/soil" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="water"
            android:text="@string/water" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tests_lst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:contentDescription="@string/select_test"
        android:paddingBottom="120dp"
        android:visibility="gone"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/test_item" />

</LinearLayout>
