<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".ui.BarcodeActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/app_bar_layout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/result_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#333"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:text="Fluoride - High Range" />

                <TextView
                    android:id="@+id/value_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:textIsSelectable="false"
                    android:textSize="27sp"
                    tools:text="0.5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_card_color"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:clickable="false"
                        android:focusable="false"
                        tools:background="#000" />

                    <Button
                        android:id="@+id/btn_calibrated_color"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="16dp"
                        android:clickable="false"
                        android:focusable="false"
                        tools:background="#000" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/color_shift"
                    android:textIsSelectable="false"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/error_message_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/name2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-black"
                    android:textColor="#333"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:text="Fluoride - High Range" />

                <TextView
                    android:id="@+id/error_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/invalid_barcode"
                    android:textAllCaps="true"
                    android:textColor="#B80404"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="#fff"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/check_color_card"
                    android:textAlignment="textStart"
                    android:textColor="#666"
                    android:textSize="16sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:minWidth="230dp"
            android:minHeight="60dp"
            android:text="@string/confirm"
            android:textSize="18sp"
            android:theme="?primaryButtonStyle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/color_extracts_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/color_extracts"
                    android:textColor="#333"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/extract_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/analyzed_image"
                    android:minHeight="250dp"
                    android:rotation="-90" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/analyzed_photo_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/analyzed_photo"
                    android:textColor="#333"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/full_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/analyzed_image"
                    android:minHeight="250dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>